force-app/main/default/objects/Prospect_Insight_Access__mdt/Prospect_Insight_Access__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata is used for accessing prospect insights portfolio depending on the filter and access of user i.e. role hierarchy</description>
    <label>Prospect Insight Access</label>
    <pluralLabel>Prospect Insight Access</pluralLabel>
</CustomObject>