force-app/main/default/objects/Prospect_Insight_Access__mdt/fields/Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Access_Type__c</fullName>
    <label>Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SVP</fullName>
                <default>true</default>
                <label>SVP</label>
            </value>
            <value>
                <fullName>QUAD4</fullName>
            </value>
            <value>
                <fullName>CD_MD</fullName>
            </value>
            <value>
                <fullName>VP</fullName>
            </value>
            <value>
                <fullName>FULL_ACCESS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>