force-app/main/default/objects/Prospect_Insight_Access__mdt/fields/Full_Access__c.field-meta.xml
<CustomField>
    <fullName>Full_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full Access</label>
    <type>Checkbox</type>
</CustomField>