force-app/main/default/objects/Prospect_Insight_Access__mdt/fields/IS_Quad4__c.field-meta.xml
<CustomField>
    <fullName>IS_Quad4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS Quad4</label>
    <type>Checkbox</type>
</CustomField>