force-app/main/default/objects/Prospect_Insight_Access__mdt/fields/Is_SVP__c.field-meta.xml
<CustomField>
    <fullName>Is_SVP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is SVP</label>
    <type>Checkbox</type>
</CustomField>