force-app/main/default/objects/Prospect_Insight_Access__mdt/fields/Visible_Tiles__c.field-meta.xml
<CustomField>
    <fullName>Visible_Tiles__c</fullName>
    <label>Visible Tiles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>